[QPlay3] fix applist overflow

--- a/APP/QPlayV3.0/www/css/index.css
+++ b/APP/QPlayV3.0/www/css/index.css
@@ -1086,21 +1086,24 @@ input[type=radio]:checked + label {
     height: 100%;
 }
 
-.download-name > div {
-    width: 100%;
-    overflow: -webkit-paged-x;
-}
-
 .download-name > div:nth-of-type(1) {
-    height: 5.92vw;
-    /* color: #323232; */
-    display: table-cell;   
-    vertical-align: bottom;
+    width: 100%;
+    height: 7vw;
+    /* color: #323232;
+    display: table-cell;  
+    vertical-align: bottom; */
+    line-height: 7vw;
 }
 
 .download-name > div:nth-of-type(2) {
+    width: 95%;
     height: 5.92vw;
-    /* color: #0f0f0f; */
+    /* overflow: -webkit-paged-x;
+    word-break: break-all;
+    color: #0f0f0f; */
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .download-list > div:nth-of-type(1) img {
